--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fullcalender",
+  "name": "react-fullcalendar",
   "version": "0.1.0",
   "dependencies": {
     "@fullcalendar/core": "^4.4.0",
